--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,7 @@
 {
+
     "require": {
+		"php": "^8.0",
         "alkemann/h2l": "dev-master"
-    },
-    "autoload": {
-        "psr-4": {
-            "backend\\": "backend/"
-        }
     }
 }
