--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,10 @@
 
     "require": {
 		"php": "^8.0",
-        "alkemann/h2l": "dev-master"
+        "alkemann/h2l": "dev-master",
+        "alkemann/debug": "^0.4.0"
+    },
+    "require-dev": {
+        "fakerphp/faker": "^1.19"
     }
 }
